# wasm-bench

./: .gitignore  README.md  buildall.sh  cleanall.sh  pom.xml  run.sh
helloworld-go/: README.md  build.sh  hello.wasm  main.go
photon/: build.sh  clean.sh
photon/bench/: Cargo.toml  build.sh  clean.sh
photon/bench/src/: lib.rs
photon/photon-rs/crate/src/: channels.rs  colour_spaces.rs  conv.rs  effects.rs  filters.rs  helpers.rs  lib.rs  monochrome.rs  multiple.rs  text.rs  transform.rs
src/main/java/org/graalvm/benchmark/: ChicoryTest.java  GraalWasmTest.java  WasmTest.java  WasmTestFixture.java
src/main/java/org/graalvm/benchmark/helloworld/: ChicoryHelloTest.java  GraalWasmHelloTest.java  HelloTestParams.java
src/main/java/org/graalvm/benchmark/photon/: ChicoryPhotonTest.java  GraalWasmPhotonTest.java  PhotonTestParams.java
