[package]
name = "bench"
version = "0.1.0"
authors = ["Aleksandar Prokopec <aleksandar.prokopec@oracle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
photon-rs = { path = "../photon-rs/crate" }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = "s"
